Merge after the ISSTA deadline. Add secondary search objectives, compositional tests, fixes around assertions